# snake-game

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
