[package]
name = "bevy-snake"
version = "0.1.0"
authors = ["auyer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] } # should remove "dynamic" for release
rand = "0.8.3"
